--- a/Project/android/AndroidManifest.xml
+++ b/Project/android/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.game.tictactoe" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.game.tictactoe" >
+
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk tools:overrideLibrary="com.google.android.gms.ads.impl"/>
 
     <application
         android:allowBackup="true"
@@ -13,6 +18,12 @@
         android:appCategory="game"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="ca-app-pub-2027760715189652~4834217373"/>
+
+
         <activity
             android:name="com.game.tictactoe.AndroidLauncher"
             android:label="@string/app_name" 
