--- a/Project/android/build.gradle
+++ b/Project/android/build.gradle
@@ -18,10 +18,11 @@ android {
     }
     defaultConfig {
         applicationId "com.game.tictactoe"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
