--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -90,7 +90,9 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-x86_64"
-        
+        implementation 'com.google.android.gms:play-services-ads:17.2.0'
+
+
     }
 }
 
