Adding google play services and implementing online mode

--- a/Project/android/build.gradle
+++ b/Project/android/build.gradle
@@ -17,7 +17,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.game.tictactoe"
+        applicationId "com.game.tictactoeoftictactoes"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
@@ -83,7 +83,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.game.tictactoe/com.game.tictactoe.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.game.tictactoeoftictactoes/AndroidLauncher'
 }
 // sets up the Android Eclipse project, using the old Ant based build.
 eclipse {
