--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -36,6 +36,7 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
+        jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
@@ -91,6 +92,9 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-x86_64"
         implementation 'com.google.android.gms:play-services-ads:17.2.0'
+        implementation "com.google.android.gms:play-services-games:17.0.0"
+        implementation "com.google.android.gms:play-services-auth:16.0.1"
+
 
 
     }
