--- a/Project/ios/robovm.properties
+++ b/Project/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.id=com.game.tictactoe
-app.mainclass=com.game.tictactoe.IOSLauncher
+app.mainclass=com.game.tictactoeoftictactoes.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=TicTacToe of TicTacToe's
