--- a/Project/android/AndroidManifest.xml
+++ b/Project/android/AndroidManifest.xml
@@ -22,10 +22,14 @@
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
                 android:value="ca-app-pub-2027760715189652~4834217373"/>
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+                   android:value="@string/app_id" />
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version"/>
 
 
         <activity
-            android:name="com.game.tictactoe.AndroidLauncher"
+            android:name="com.game.tictactoeoftictactoes.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
